Prevent unchecked default lists from being visually collapsed
Related issue:
- https://github.com/gorhill/uBlock/issues/2303

--- a/src/css/3p-filters.css
+++ b/src/css/3p-filters.css
@@ -57,7 +57,7 @@ body.hideUnused #listsOfBlockedHostsPrompt::before,
     margin-inline-start: 0.6em;
     -webkit-margin-start: 0.6em;
     }
-.groupEntry:not([data-groupkey="user"]) .listEntry.unused {
+.groupEntry:not([data-groupkey="user"]) .listEntry:not(.isDefault).unused {
     display: none;
     }
 .listEntry > * {
